--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=HBSGool
+# ===============================
+# Server
+# ===============================
+server.port=8080
+
+# ===============================
+# PostgreSQL DataSource
+# ===============================
+spring.datasource.url=jdbc:postgresql://hbsgool-db:5432/hbsgooldb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# Swagger
+# ===============================
+springdoc.swagger-ui.path=/swagger-ui.html
