--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 # ===============================
 # PostgreSQL DataSource
 # ===============================
-spring.datasource.url=jdbc:postgresql://hbsgool-db:5432/hbsgooldb
+spring.datasource.url=jdbc:postgresql://localhost:5433/hbsgooldb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -19,6 +19,10 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+###### JSON
+# spring.jackson.property-naming-strategy=CAMEL_CASE
 
 # ===============================
 # Swagger
