--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Flyway
 # ===============================
 spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=false
 
 # ===============================
 # Swagger
