Feat: Implementada autenticación
- Implementación de JWT
- Registro de usuarios
- Login a través de email + contraseña
- Rutas protegidas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Swagger
 # ===============================
 springdoc.swagger-ui.path=/swagger-ui.html
+
+jwt.secret=EJOwhpesih1Cog/LFkwdE7ka/Wtxsc+iNer40xnUn14=
+# 1 hora
+jwt.expiration-ms=3600000
