--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,8 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+
 		<!-- H2 in-memory database for tests -->
 		<dependency>
 			<groupId>com.h2database</groupId>
