--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.port=8080
 # ===============================
 # PostgreSQL DataSource
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/hbsgooldb
+spring.datasource.url=jdbc:postgresql://localhost:5433/hbsgooldb
 spring.datasource.username=postgres
-spring.datasource.password=oscar9
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
