Feat: Leer reservaciones del usuario logeado.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+/uploads/evidencias/reserva_1_1760337025171
+/uploads/evidencias/reserva_2_1760337206046
+/uploads/evidencias/reserva_3_1760337269088
+/uploads/evidencias/reserva_null_1760334286983_IMG_20250721_205439.jpg
+/uploads/evidencias/reserva_null_1760334376816_charly.jpg
